--- a/main.css
+++ b/main.css
@@ -27,3 +27,12 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+
+#name-label,
+#email-label,
+#number-label,
+#dropdown-label {
+	padding: 20px 0 10px 0;
+	font-size: 20px;
+}
+
