--- a/main.css
+++ b/main.css
@@ -69,3 +69,16 @@ body {
 	resize: none;
 	height: 7rem;
 }
+
+#btn {
+	padding: 30px 0 10px 0;
+}
+
+#submit {
+	background-color: green;
+	width: 100%;
+	height: 3rem;
+	font-size: 2rem;
+	color: white;
+	border-radius: 3px;
+}
