--- a/main.css
+++ b/main.css
@@ -18,10 +18,27 @@ body {
 	color: white;
 }
 
+#header {
+	text-align: center;
+	color: rgb(1, 1, 19);
+}
+
+#header h1 {
+	font-size: 3rem;
+	font-weight: 900;
+	margin-bottom: 0;
+}
+
+#header p {
+	font-size: 1.5rem;
+	font-weight: 600;
+	margin-top: 0;
+}
+
 #survey-form {
 	background-color: rgb(1, 1, 19);
 	opacity: 0.8;
-	margin: 10%;
+	margin: 0 10% 10% 10%;
 	padding: 3%;
 	border-radius: 10px;
 	display: flex;
