--- a/main.css
+++ b/main.css
@@ -38,11 +38,12 @@ body {
 #survey-form {
 	background-color: rgb(1, 1, 19);
 	opacity: 0.8;
-	margin: 0 10% 10% 10%;
 	padding: 3%;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
+	max-width: 900px;
+	margin: auto;
 }
 
 #name-label,
