--- a/main.css
+++ b/main.css
@@ -35,6 +35,34 @@ body {
 	margin-top: 0;
 }
 
+@media (max-width: 600px) {
+	#header h1 {
+		font-size: 2rem;
+		font-weight: 900;
+		margin-bottom: 0;
+	}
+	
+	#header p {
+		font-size: 1rem;
+		font-weight: 600;
+		margin-top: 0;
+	}
+}
+
+@media (max-width: 400px) {
+	#header h1 {
+		font-size: 1.5rem;
+		font-weight: 900;
+		margin-bottom: 0;
+	}
+	
+	#header p {
+		font-size: 0.8rem;
+		font-weight: 600;
+		margin-top: 0;
+	}
+}
+
 #survey-form {
 	background-color: rgb(1, 1, 19);
 	opacity: 0.8;
